--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -32,8 +32,13 @@
             <p>Feel free to navigate throughout the site.</p>
         </main>
 
+        <form action="/" method="POST" class="logout">
 
-        </script>
+            <button id="logoutbutton"type="submit">Logout</button>
+            
+        </form>
+        
+       
     </div>
 </body>
 
