--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -39,6 +39,9 @@
             </div>
             <button type="submit">Login</button>
             <p><a href="/register">Don't have an account?</a></p>
+
+            <p>Hey Kevin, feel free to test out this supportive user account:<br>jcarrey@test.com<br>Password1!</p>
+
         </form>
         <p id="output"></p>
     </main>
