[finishes #183997994] nav fixed in dashboard

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -12,11 +12,9 @@
 
 <body>
     <div id="wrapper">
-
+        
         <header>
-            <img src="images/HSDLogo.png" alt="HyperSupportDesk Logo" align="left">
-        </header>
-
+            <img src="images/HSDLogo.png" alt="HyperSupportDesk Logo">
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
@@ -25,9 +23,9 @@
                 <li><a href="/quickFixes">QuickFixes</a></li>
             </ul>
         </nav>
-
+    </header>
         <main id="hero">
-            <h2>HyperSupportDesk - Dashboard</h2><br>
+            <h2>HyperSupportDesk - Dashboard</h2>
 
             <p>You can now create a ticket.</p>
 
