Increased nav consistency.

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -15,14 +15,15 @@
         
         <header>
             <img src="images/HSDLogo.png" alt="HyperSupportDesk Logo">
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About Us</a></li>
-                <li><a href="/login">Login</a></li>
-                <li><a href="/quickFixes">QuickFixes</a></li>
-            </ul>
-        </nav>
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/about">About Us</a></li>
+                    <li><a href="/dashboard">Dashboard</a></li>
+                    <li><a href="/login">Login</a></li>
+                    <li><a href="/quickFixes">QuickFixes</a></li>
+                </ul>
+            </nav>
     </header>
         <main id="hero">
             <h2>HyperSupportDesk - Dashboard</h2>
